mern-employee-salary-management/k8s/backend.yaml
apiVersion:apps/v1
kind: Deployment
metadata:
  name: kuberbac-backend
  labels:
    app: kuberbac-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kuberbac-backend
  template:
    metadata:
      labels:
        app: kuberbac-backend
    spec:
      containers:
      - name: backend
        image: your-docker-user/kuberbac-backend:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: kuberbac-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
