mern-employee-salary-management/k8s/frontend.yaml
apiVersion:apps/v1
kind: Deployment
metadata:
  name: kuberbac-frontend
  labels:
    app: kuberbac-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kuberbac-frontend
  template:
    metadata:
      labels:
        app: kuberbac-frontend
    spec:
      containers:
      - name: frontend
        image: your-docker-user/kuberbac-frontend:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: kuberbac-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
